fixed main__wrap paddings

--- a/css/app.css
+++ b/css/app.css
@@ -164,24 +164,55 @@ header .header__wrap .nav {
   margin-right: 15px;
 }
 
-@media only screen and (min-width: 1000px) {
-  .main__wrap .wrapper {
+.main__wrap {
+  width: 100%;
+  height: 100%;
+}
+
+@media (min-width: 920px) {
+  .main__wrap {
     width: 1000px;
     margin: 0 auto;
   }
 }
 
 .main__wrap .content__boxes {
-  overflow: hidden;
+  display: block;
+  padding: 60px 0 0;
+}
+
+@media (min-width: 920px) {
+  .main__wrap .content__boxes {
+    display: flex;
+    padding: 10px 0 0 20px;
+    justify-content: space-between;
+    overflow: hidden;
+  }
 }
 
 .main__wrap .content__boxes .box__item {
+  display: block;
   margin: 16px 16px 0;
   width: calc(100% - 32px);
-  height: 500px;
 }
 
 .main__wrap .content__boxes .box__item .img {
   width: 100%;
-  height: 80%;
+  padding: 30px;
+  background: #f3d7ae;
+}
+
+.main__wrap .content__boxes .box__item h3 {
+  font-family: 'Times New Roman', Times, serif;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 15px;
+  padding-top: 20px;
+  padding-bottom: 5px;
+  color: #74740c;
+}
+
+.main__wrap .content__boxes .box__item p {
+  font-size: 12px;
+  text-align: center;
 }
