--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -70,32 +70,55 @@ header {
 }
 
 .main__wrap {
-    @media only screen and (min-width: 1000px) {
-        .wrapper {
-            width: 1000px;
-            margin: 0 auto;
-        }
-    }
+    width: 100%;
+    height: 100%;
+    @media (min-width: $xl) {
+        width: 1000px;
+        margin: 0 auto;
+    } 
     .content__boxes {
-        overflow: hidden;
+        display: block;
+        padding: 60px 0 0;
+        
+        @media (min-width: $xl) {
+            display: flex;
+            padding: 10px 0 0 20px;
+            justify-content: space-between;
+            overflow: hidden;
+        } 
         .box__item {
+            display: block;
             margin: 16px 16px 0;
             width: calc(100% - 32px);
-            height: 500px;  
+            @media (min-width: $xl) {
+                
+            } 
+
             .img {
                 width: 100%;
-                height: 80%;
-
+                // display: block;
+                padding: 30px;
+                background: rgb(243, 215, 174);
             }
-        }    
+        
+            h3 {
+                font-family: 'Times New Roman', Times, serif;
+                text-transform: uppercase;
+                text-align: center;
+                font-size: $small;
+                padding-top: 20px;
+                padding-bottom: 5px;
+                color: rgb(116, 116, 12);
+            } 
+            p {
+                font-size: $tiny;  
+                text-align: center;
+            }   
+        }   
     }            
 }            
 
 
 
-// @media only screen and (min-width: 1000px) {
-//     .main__wrap {
-//         width: 1000px;
-//         margin: 0 auto;
-//     }
-// }
+
+
